[package]
name = "plantuml"
version = "0.1.0"
edition = "2021"
description = "Zero-dependency PlantUML wrapper using embedded native image"
license = "MIT OR Apache-2.0"

[lib]
name = "plantuml"
path = "src/lib.rs"

[[bin]]
name = "plantuml"
path = "src/bin/plantuml.rs"

[dependencies]
thiserror = "2.0"
dirs = "5.0"
once_cell = "1.20"
zip = "2.2"

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
zip = "2.2"
