[package]
name = "plantuml-rs"
version = "0.1.0"
edition = "2021"
description = "Zero-dependency PlantUML wrapper with bundled JRE"
license = "MIT OR Apache-2.0"
repository = "https://github.com/YOUR_USERNAME/plantuml-rs"
keywords = ["plantuml", "uml", "diagram", "svg"]
categories = ["graphics", "visualization"]

[lib]
name = "plantuml"
path = "src/lib.rs"

[[bin]]
name = "plantuml-rs"
path = "src/bin/plantuml.rs"

[dependencies]
thiserror = "2.0"
dirs = "5.0"
once_cell = "1.20"
zip = "2.2"

[build-dependencies]
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"] }
zip = "2.2"
flate2 = "1.0"
tar = "0.4"
